--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
 node_js:
-  - "7"
+  - "8"
 
 script:
   - npm run test
   - npm run build
+
+deploy:
+  provider: npm
+  skip_cleanup: true
+  email: "$NPM_EMAIL"
+  api_key: "$NPM_TOKEN"
+  on:
+    branch: master
